fixed header on mobile

--- a/calorie_count/src/components/header/header.css
+++ b/calorie_count/src/components/header/header.css
@@ -6,10 +6,10 @@
   color: white;
   display:flex;
   justify-content: space-between;
-  
 }
 nav{
   width:80%;
+  max-height:100%;
 }
 .navElements{
   display:flex;
@@ -37,8 +37,14 @@ nav{
   padding-bottom:0.6rem;
 }
 
+/* @media(max-height:700px){
+  nav{
+    
+  }
+} */
 
-@media(max-width: 1000px){
+@media(max-width: 1000px ){
+  
   .navElements{
     z-index:1000;
     display:flex;
@@ -49,16 +55,17 @@ nav{
     left:0;
     background:red;
     width:3rem;
-    height:100%;
+    height:100vh;
     /* background-color: rgb(65, 60, 60); */
     /* background:#34DD9F; */
     background:linear-gradient(to left,rgb(34, 170, 163),rgb(40, 168, 207));
     box-shadow: 2px 2px 2px  black;
+    justify-content: initial;
   }
   .navElements li{
     list-style: none;
     padding:0;
-    margin:2.5rem -2.4rem 8rem;
+    margin:2.5rem -2.4rem 8rem; 
      
   }
   .navElements a{
@@ -86,3 +93,4 @@ nav{
    font-size:.85rem;
  }
 }
+
